--- a/node/package.json
+++ b/node/package.json
@@ -2,7 +2,6 @@
   "name": "Inexor_IPC_Client",
   "version": "0.8.0",
   "description": "Scripting in node.js for Inexor",
-  "main": "src/tree/index.js",
   "scripts": {
     "test": "mocha",
     "install": "bower install",
@@ -22,10 +21,8 @@
   "dependencies": {
     "bower": "^1.7.7",
     "bunyan": "^1.7.0",
-    "grpc": "^0.14.1",
-    "protobufjs": "^5.0.1",
+    "inexor-tree": "^0.9.0",
     "restify": "^4.0.4",
-    "uuid": "^2.0.1",
     "yargs": "^4.1.0"
   },
   "devDependencies": {
